[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")

[node name="DPad" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -420.0
offset_right = 220.0
offset_bottom = -40.0

[node name="UpButton" type="Button" parent="DPad"]
offset_left = 140.0
offset_top = 0.0
offset_right = 300.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 36
text = "UP"

[node name="DownButton" type="Button" parent="DPad"]
offset_left = 140.0
offset_top = 240.0
offset_right = 300.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 36
text = "DOWN"

[node name="LeftButton" type="Button" parent="DPad"]
offset_left = 0.0
offset_top = 120.0
offset_right = 160.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 36
text = "LEFT"

[node name="RightButton" type="Button" parent="DPad"]
offset_left = 280.0
offset_top = 120.0
offset_right = 440.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 36
text = "RIGHT"

[node name="PauseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 28
text = "PAUSE"

[node name="PauseOverlay" type="Control" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Panel" type="Panel" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -260.0
offset_right = 360.0
offset_bottom = 260.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay/Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
alignment = 1

[node name="PauseLabel" type="Label" parent="PauseOverlay/Panel/VBoxContainer"]
size_flags_vertical = 3
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1
vertical_alignment = 1
text = "Pausado"

[node name="ResumeButton" type="Button" parent="PauseOverlay/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
theme_override_font_sizes/font_size = 40
text = "Continuar"

[node name="PauseRestartButton" type="Button" parent="PauseOverlay/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
theme_override_font_sizes/font_size = 40
text = "Reiniciar"

[node name="MenuButton" type="Button" parent="PauseOverlay/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
theme_override_font_sizes/font_size = 40
text = "Menu"

[node name="Overlay" type="Control" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Panel" type="Panel" parent="Overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -220.0
offset_right = 360.0
offset_bottom = 220.0

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
alignment = 1

[node name="MessageLabel" type="Label" parent="Overlay/Panel/VBoxContainer"]
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
text = "SECO SECO SECO!"

[node name="RestartButton" type="Button" parent="Overlay/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
theme_override_font_sizes/font_size = 44
text = "Reiniciar"
